CSS: Bootstrap added and fixed overflow of content on smaller screens

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -29,12 +29,13 @@ body {
 
 .checklist {
   border: 2px solid black;
-  padding: 0 5%;
+  padding: 1% 5%;
   margin: auto 5%;
   background-color: white;
 }
 
 .checklist-items ul {
   list-style-type: none;
-  padding-left: 0;
+  padding: 1%;
+  margin-bottom: 0;
 }
