--- a/src/assets/css/IndividualMovie.css
+++ b/src/assets/css/IndividualMovie.css
@@ -1,5 +1,5 @@
 .individual-movie {
-  line-height: 12px;
+  padding: 1%;
   border-bottom: 1px solid black;
 }
 
